tests/good/print_int.xprshn
int a!
read a!
int b!
read b!
