tests/compile_error/read_print_edge.xprshn
// Compile error: read/print edge cases
int a!
float b!
read a!
read b!
print a!
print b!
read a!
print a! 